# git-starcoder

./: .gitignore  00_START_HERE.md  COMPREHENSIVE_METAL_FIX.md  COMPREHENSIVE_PIPELINE_README.md  CRITICAL_GAPS_ANALYSIS.md  CUSTOM_TURING_KERNEL_SUCCESS.md  DELIVERY_SUMMARY.txt  EFFECTIVENESS_OPTIMIZATION.md  ELITE_QUICKSTART.md  EXACT_COMMANDS.txt  FINAL_CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INSTALL.sh  MAXIMUM_EFFECTIVENESS_GUIDE.md  METAL_BACKWARD_FIX_INDEX.md  METAL_BACKWARD_FIX_SUMMARY.md  MPS_OPTIMIZATION_GUIDE.md  OPTIMIZATION_ANALYSIS.md  PREFLIGHT_CHECK.sh  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  README_COMPREHENSIVE_FIX.md  README_EFFECTIVENESS.md  READY_TO_TRAIN.md  REAL_DATASET_STATUS.md  REBUILD_ORCHARD_FIX.sh  RUN.sh  RUN_FULL_TESTS.sh  RUN_THIS_FIRST.sh  TECHNICAL_ANALYSIS_MTLBUFFER_STRATEGY.md  TEST_FIXES_SUMMARY.md  adaptive_dataset_packer.py  adaptive_training_orchestrator.py  comprehensive_pipeline.py  config.yaml  (+72 more)
docs/: 00-START-HERE.md  AUDIT_AND_OPTIMIZATION.md  COMMANDS.md  COMPLETION_REPORT.txt  DELIVERABLES.txt  DELIVERY_METAL_CUDA.txt  DELIVERY_SUMMARY.txt  DYNAMIC_SYSTEM_GUIDE.md  ERRORS_FIXED_SESSION2.md  EXECUTE.md  FIXES_AND_IMPROVEMENTS.md  FIXES_APPLIED.md  FULL_COVERAGE_INDEX.md  FULL_COVERAGE_QUICKSTART.md  FULL_COVERAGE_SUMMARY.md  FULL_COVERAGE_TESTING.md  HARDWARE-OPTIMIZED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  INDEX_METAL_CUDA.md  LLAMA_MIGRATION_PLAN.md  LONG_CONTEXT_IMPLEMENTATION_SUMMARY.md  LONG_CONTEXT_OPTIMIZATION.md  METAL_CUDA_INTEGRATION.md  METAL_CUDA_INTEGRATION_SUMMARY.md  MODEL_UPGRADE_GUIDE.md  NEW-FILES-INDEX.md  NEXT_STEPS.md  OPTIMIZATIONS_APPLIED.txt  OPTIMIZATION_REPORT.md  PROJECT_SUMMARY.txt  QUICKSTART.md  (+28 more)
metal-backend/experimental/orchard_ops/: CMakeLists.txt  CMakeLists.txt.bak
metal-backend/experimental/orchard_ops/mps/: flash_attn.mm
(+28 files in other folders)
